# wgrib2-docs

./: .gitignore  README.md  environment.yml  pages.toml  pyproject.toml  readthedocs.yml  scraping-script.ipynb  setup.cfg  test.md  wgrib2-logo.pptx  zensical.toml
.github/workflows/: docs.yml
docs/: conf.py  index.md  index.rst
docs/User-Guide/: 01_install-conda.md  02_index-inventory.md  best-practices.md  compile-questions.md  compile.md  extra.md
docs/misc/: index.rst
docs/options/: index.md  index.rst
docs/pywgrib2_s/: index.md  index.rst  pywgrib2_s.md  pywgrib2_s_close.md  pywgrib2_s_conventions.md  pywgrib2_s_global_variables.md  pywgrib2_s_inq.md  pywgrib2_s_mk_inv.md  pywgrib2_s_read_inv.md  pywgrib2_s_wgrib2.md  pywgrib2_s_write.md
docs/release_notes/: changelog_v0.md  changelog_v1.md  changelog_v2.md  changelog_v3.md  index.rst  release-notes.md
docs/todo/: bin_ieee_text_format.md  calling_wgrib2.md  for_n.md  new_grid_intro.md  usage_questions.md
docs/user_guide/: bin_ieee_text_format.md  calling_wgrib2.md  compile_questions.md  convert_wgrib2.md  default_inv.md  for_n.md  grb2_wrt.md  gribify2.md  index.rst  install-conda.md  new_grid_intro.md  pipes.md  problems.md  selecting-messages.md  selecting_messages.md  small_fast_databases.md  special_file_names.md  speed.md  time_interpolation.md  types.md  usage_questions.md  user_grib2tables.md
scrape-pages/: pages.toml
scraped-pages/documentation/: compile_questions.md  default_inv.md  function.md  grb2_wrt.md  limitations.md  pipes.md  submessages.md  usage_questions.md
scraped-pages/pywgrib2_s/: pywgrib2_s.md  pywgrib2_s_close.md  pywgrib2_s_conventions.md  pywgrib2_s_global_variables.md  pywgrib2_s_inq.md  pywgrib2_s_install.md  pywgrib2_s_mk_inv.md  (+3 more)
(+903 files in other folders)
