[metadata]
name = wgrib2-docs
description = Unofficial documentation for wgrib2
author = Brian K. Blaylock
author_email = blaylockbk@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
url = https://github.com/blaylockbk/wgrib2-docs
project_urls =
    Source Code = https://github.com/blaylockbk/wgrib2-docs
    Documentation = https://wgrib2-docs.readthedocs.io/
    Release Notes = https://github.com/blaylockbk/wgrib2-docs/releases
    Bug Tracker = https://github.com/blaylockbk/wgrib2-docs/issues
keywords =
    meteorology
    weather
    forecast
    atmosphere
    GRIB2
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.8
zip_safe = False
install_requires =
    numpy
    pandas
    toml

[options.extras_require]
docs =
    autodocsumm
    linkify-it-py
    myst-parser
    nbconvert
    nbsphinx
    pydata-sphinx-theme
    recommonmark
    sphinx
    sphinx-autosummary-accessors
    sphinx-design
    sphinx-markdown-tables
    sphinxcontrib-mermaid

#tests =
#    pytest
#    black
#    isort
#
#[build_sphinx]
#source-dir = docs
#build-dir = docs/_build
#
